Refactoring Lombock integration